<resources>
    <string name="app_name">FitTune</string>
    <string name="title_dashboard">Dashboard</string>

    <string name="action_sign_in_short">Sign up</string>
    <string name="email">Email</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="bio">A short bio</string>
</resources>
